# Blockchain

./: .gitignore  README.md  main.py  serve_site.py
Blockchain/: README.md
Blockchain/backend/: pom.xml
Blockchain/backend-node/: package-lock.json  package.json
Blockchain/backend-node/src/: db.js  server.js
Blockchain/frontend/: package-lock.json  package.json
Blockchain/frontend/src/: App.tsx
Blockchain/frontend/src/api/: projects.ts
Blockchain/frontend/src/components/: Layout.tsx  ThemeToggle.tsx
Blockchain/frontend/src/context/: PhantomContext.tsx
Blockchain/frontend/src/pages/: SolanaEscrowDemoPage.tsx  WalletPlaygroundPage.tsx
Blockchain/frontend/src/types/: index.ts
Blockchain/frontend/src/utils/: solanaDevnetTransfer.ts
backend-node/: .env.example  package-lock.json  package.json
backend-node/src/: db.js  server.js
escrow_simple/: README.md
escrow_simple/client/: mock_ai.py  requirements.txt  run_demo.py
escrow_simple/contract/programs/escrow/: Cargo.toml
escrow_simple/idl/: escrow.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  ProtectedRoute.tsx  ThemeToggle.tsx
frontend/src/context/: ThemeContext.tsx
frontend/src/pages/auth/: LoginPage.tsx  (+1 more)
solana/: Anchor.toml  Cargo.toml  HOWTO_RUN_TWO_USERS.txt  package-lock.json  package.json  tsconfig.json
solana/.cargo/: config.toml
solana/programs/freelance_escrow/: Cargo.toml
solana/programs/freelance_escrow/src/: lib.rs
solana/scripts/: mnemonic_to_keypair.py  run_escrow_flow.ts
solana/tests/: freelance_escrow.ts
web/: index.html
(+10 files in other folders)
