[package]
name = "freelance_escrow"
version = "0.1.0"
description = "Freelance escrow: mutual approval releases funds; mock AI arbiter after deadline"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "freelance_escrow"

[features]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
